# tetris

./: CMakeLists.txt  Makefile  README.md  tetris.c  tetris.h  tetris.sh  tetris_I.h  tetris_J.h  tetris_L.h  tetris_O.h  tetris_S.h  tetris_T.h  tetris_Z.h  tetris_abstraction.h  tetris_emulation.c  tetris_emulation.h  tetris_ia.c  tetris_ia.h  tetris_item.h  tetris_map.c  tetris_map.h  tetris_x.c  tetris_x.h
app/: Makefile  tetris_x11_keytest.c  tetris_x11_setup.c  tetris_x11_setup.h  tetris_x11_simulation.c
config/: RP  TOTO  TYTY
src/: tetris.c  tetris.h  tetris_hold.h  tetris_map.c  tetris_map.h
src/tetris_ai/: tetris_ai.c  tetris_ai.h  tetris_influence.h
src/tetris_ia/: tetris_ia.c
src/tetris_item/: tetris_I.h  tetris_J.h  tetris_L.h  tetris_O.h  tetris_S.h  tetris_T.h  tetris_Z.h  tetris_item.h
src/tetris_move/: tetris_move.c  tetris_move.h
src/tetris_wall/: tetris_wall.c  tetris_wall.h
src/tetris_x/: tetris_x.c  tetris_x.h
src/tetris_x11/: tetris_x11.c  tetris_x11.h  tetris_x11_keyboard.c  tetris_x11_keyboard.h
